Bug 508721 - fixing a bug in argument passing in WinCE build tools, r=blassey