build/wince/tools/arm-wince-as.c
@@ -7,7 +7,9 @@ main(int argc, char **argv)
   int i = 0;
   
   args[i++] = ASM_PATH;
-  args[i++] = "-I\"" WCE_INC "\""; 
+
+  // armasm.exe requires a space between -I and the path. See bug 508721
+  args[i++] = "-I \"" WCE_INC "\""; 
 
   i += argpath_conv(&argv[1], &args[i]);
 
